--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.2",
     "graphql": "^16.3.0",
     "graphql-iso-date": "^3.6.1",
+    "graphql-scalars": "^1.17.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8"
   },
