--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-graph-vis": "^1.0.7",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.1",
+    "react-select": "^5.3.2",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
